// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`run test 'barrel files' with location '../../test-case/barrel-files' 1`] = `
{
  "MODULE_REFERENCE:%40fiberplane%2Fhono-otel@measure": {
    "id": "MODULE_REFERENCE:%40fiberplane%2Fhono-otel@measure",
    "import": "measure",
    "importPath": "@fiberplane/hono-otel",
    "name": "@fiberplane/hono-otel",
    "type": "MODULE_REFERENCE",
    "version": "0.3.1",
  },
  "MODULE_REFERENCE:hono%2Fcors@cors": {
    "id": "MODULE_REFERENCE:hono%2Fcors@cors",
    "import": "cors",
    "importPath": "hono/cors",
    "name": "hono",
    "type": "MODULE_REFERENCE",
    "version": "4.6.6",
  },
  "ROUTE_ENTRY:index.ts@407": {
    "fileName": "index.ts",
    "id": "ROUTE_ENTRY:index.ts@407",
    "method": "get",
    "modules": [],
    "path": "/user/1",
    "position": 407,
    "sources": [
      "SOURCE_REFERENCE:index.ts@426",
      "SOURCE_REFERENCE:index.ts@434",
    ],
    "type": "ROUTE_ENTRY",
  },
  "ROUTE_ENTRY:index.ts@531": {
    "fileName": "index.ts",
    "id": "ROUTE_ENTRY:index.ts@531",
    "method": "get",
    "modules": [],
    "path": "/",
    "position": 531,
    "sources": [
      "SOURCE_REFERENCE:index.ts@544",
    ],
    "type": "ROUTE_ENTRY",
  },
  "ROUTE_TREE:index.ts@102": {
    "baseUrl": "",
    "entries": [
      "ROUTE_ENTRY:index.ts@407",
      "ROUTE_ENTRY:index.ts@531",
    ],
    "fileName": "index.ts",
    "id": "ROUTE_TREE:index.ts@102",
    "name": "app",
    "position": 102,
    "type": "ROUTE_TREE",
  },
  "SOURCE_REFERENCE:db%2FgetUser.ts@128": {
    "character": 6,
    "content": "const DEFAULT_USER_NAME = "John Doe"",
    "fileName": "db/getUser.ts",
    "id": "SOURCE_REFERENCE:db%2FgetUser.ts@128",
    "line": 4,
    "modules": [],
    "position": 128,
    "references": [],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:db%2FgetUser.ts@166": {
    "character": 6,
    "content": "const DEFAULT_EMAIL = "john@doe.com"",
    "fileName": "db/getUser.ts",
    "id": "SOURCE_REFERENCE:db%2FgetUser.ts@166",
    "line": 5,
    "modules": [],
    "position": 166,
    "references": [],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:db%2FgetUser.ts@222": {
    "character": 23,
    "content": "const getUser = measure("getUser", async () => {
  await sleep(100);
  const value: User = {
    name: DEFAULT_USER_NAME,
    email: DEFAULT_EMAIL,
  };
  return value;
})",
    "fileName": "db/getUser.ts",
    "id": "SOURCE_REFERENCE:db%2FgetUser.ts@222",
    "line": 7,
    "modules": [
      "MODULE_REFERENCE:%40fiberplane%2Fhono-otel@measure",
    ],
    "position": 222,
    "references": [
      "SOURCE_REFERENCE:utils.ts@0",
      "SOURCE_REFERENCE:types.ts@29",
      "SOURCE_REFERENCE:db%2FgetUser.ts@128",
      "SOURCE_REFERENCE:db%2FgetUser.ts@166",
    ],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:db%2Findex.ts@9": {
    "character": 9,
    "content": "export { getUser } from "./getUser"",
    "fileName": "db/index.ts",
    "id": "SOURCE_REFERENCE:db%2Findex.ts@9",
    "line": 0,
    "modules": [],
    "position": 9,
    "references": [
      "SOURCE_REFERENCE:db%2FgetUser.ts@222",
    ],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:index.ts@426": {
    "character": 19,
    "content": "cors()",
    "fileName": "index.ts",
    "id": "SOURCE_REFERENCE:index.ts@426",
    "line": 14,
    "modules": [
      "MODULE_REFERENCE:hono%2Fcors@cors",
    ],
    "position": 426,
    "references": [],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:index.ts@434": {
    "character": 27,
    "content": "async (c) => {
  // await getUser();
  const user = await getUser();
  return c.json(user);
}",
    "fileName": "index.ts",
    "id": "SOURCE_REFERENCE:index.ts@434",
    "line": 14,
    "modules": [],
    "position": 434,
    "references": [
      "SOURCE_REFERENCE:db%2Findex.ts@9",
    ],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:index.ts@544": {
    "character": 13,
    "content": "(c) => c.text("Hello, Hono!")",
    "fileName": "index.ts",
    "id": "SOURCE_REFERENCE:index.ts@544",
    "line": 20,
    "modules": [],
    "position": 544,
    "references": [],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:types.ts@0": {
    "character": 0,
    "content": "export type Email = string;",
    "fileName": "types.ts",
    "id": "SOURCE_REFERENCE:types.ts@0",
    "line": 0,
    "modules": [],
    "position": 0,
    "references": [],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:types.ts@29": {
    "character": 0,
    "content": "export type User = {
  name: string;
  email: Email;
};",
    "fileName": "types.ts",
    "id": "SOURCE_REFERENCE:types.ts@29",
    "line": 2,
    "modules": [],
    "position": 29,
    "references": [
      "SOURCE_REFERENCE:types.ts@0",
    ],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:utils.ts@0": {
    "character": 0,
    "content": "export async function sleep(duration: number) {
  return new Promise((resolve) => setTimeout(resolve, duration));
}",
    "fileName": "utils.ts",
    "id": "SOURCE_REFERENCE:utils.ts@0",
    "line": 0,
    "modules": [],
    "position": 0,
    "references": [],
    "type": "SOURCE_REFERENCE",
  },
}
`;

exports[`run test 'empty' with location '../../test-case/empty' 1`] = `{}`;

exports[`run test 'hono factory' with location '../../test-case/hono-factory' 1`] = `
{
  "ROUTE_ENTRY:bye.ts@54": {
    "fileName": "bye.ts",
    "id": "ROUTE_ENTRY:bye.ts@54",
    "method": "get",
    "modules": [],
    "path": "/bye",
    "position": 54,
    "sources": [
      "SOURCE_REFERENCE:bye.ts@70",
    ],
    "type": "ROUTE_ENTRY",
  },
  "ROUTE_ENTRY:factory.ts@281": {
    "fileName": "factory.ts",
    "id": "ROUTE_ENTRY:factory.ts@281",
    "method": "get",
    "modules": [],
    "path": "/",
    "position": 281,
    "sources": [
      "SOURCE_REFERENCE:factory.ts@294",
    ],
    "type": "ROUTE_ENTRY",
  },
  "ROUTE_ENTRY:index.ts@124": {
    "fileName": "index.ts",
    "id": "ROUTE_ENTRY:index.ts@124",
    "method": "get",
    "modules": [],
    "path": "/",
    "position": 124,
    "sources": [
      "SOURCE_REFERENCE:index.ts@142",
    ],
    "type": "ROUTE_ENTRY",
  },
  "ROUTE_ENTRY:index.ts@173": {
    "fileName": "index.ts",
    "id": "ROUTE_ENTRY:index.ts@173",
    "method": "get",
    "modules": [],
    "path": "/bye",
    "position": 173,
    "sources": [
      "SOURCE_REFERENCE:index.ts@194",
    ],
    "type": "ROUTE_ENTRY",
  },
  "ROUTE_ENTRY:panic.ts@54": {
    "fileName": "panic.ts",
    "id": "ROUTE_ENTRY:panic.ts@54",
    "method": "get",
    "modules": [],
    "path": "/",
    "position": 54,
    "sources": [
      "SOURCE_REFERENCE:panic.ts@67",
    ],
    "type": "ROUTE_ENTRY",
  },
  "ROUTE_ENTRY:silence.ts@58": {
    "fileName": "silence.ts",
    "id": "ROUTE_ENTRY:silence.ts@58",
    "method": "get",
    "modules": [],
    "path": "/",
    "position": 58,
    "sources": [
      "SOURCE_REFERENCE:silence.ts@75",
    ],
    "type": "ROUTE_ENTRY",
  },
  "ROUTE_TREE:bye.ts@36": {
    "baseUrl": "",
    "entries": [
      "ROUTE_ENTRY:bye.ts@54",
    ],
    "fileName": "bye.ts",
    "id": "ROUTE_TREE:bye.ts@36",
    "name": "bye",
    "position": 36,
    "type": "ROUTE_TREE",
  },
  "ROUTE_TREE:factory.ts@248": {
    "baseUrl": "",
    "entries": [
      "ROUTE_ENTRY:factory.ts@281",
      "ROUTE_TREE_REFERENCE:bye.ts@36",
      "ROUTE_TREE_REFERENCE:silence.ts@36",
      "ROUTE_TREE_REFERENCE:panic.ts@36",
    ],
    "fileName": "factory.ts",
    "id": "ROUTE_TREE:factory.ts@248",
    "name": "app",
    "position": 248,
    "type": "ROUTE_TREE",
  },
  "ROUTE_TREE:index.ts@101": {
    "baseUrl": "",
    "entries": [
      "ROUTE_ENTRY:index.ts@124",
      "ROUTE_ENTRY:index.ts@173",
    ],
    "fileName": "index.ts",
    "id": "ROUTE_TREE:index.ts@101",
    "name": "subHello",
    "position": 101,
    "type": "ROUTE_TREE",
  },
  "ROUTE_TREE:index.ts@75": {
    "baseUrl": "",
    "entries": [
      "ROUTE_TREE_REFERENCE:factory.ts@248",
      "ROUTE_TREE_REFERENCE:index.ts@101",
    ],
    "fileName": "index.ts",
    "id": "ROUTE_TREE:index.ts@75",
    "name": "app",
    "position": 75,
    "type": "ROUTE_TREE",
  },
  "ROUTE_TREE:panic.ts@36": {
    "baseUrl": "",
    "entries": [
      "ROUTE_ENTRY:panic.ts@54",
    ],
    "fileName": "panic.ts",
    "id": "ROUTE_TREE:panic.ts@36",
    "name": "app",
    "position": 36,
    "type": "ROUTE_TREE",
  },
  "ROUTE_TREE:silence.ts@36": {
    "baseUrl": "",
    "entries": [
      "ROUTE_ENTRY:silence.ts@58",
    ],
    "fileName": "silence.ts",
    "id": "ROUTE_TREE:silence.ts@36",
    "name": "silence",
    "position": 36,
    "type": "ROUTE_TREE",
  },
  "ROUTE_TREE_REFERENCE:bye.ts@36": {
    "fileName": "bye.ts",
    "id": "ROUTE_TREE_REFERENCE:bye.ts@36",
    "name": "bye",
    "path": "/bye",
    "position": 36,
    "targetId": "ROUTE_TREE:bye.ts@36",
    "type": "ROUTE_TREE_REFERENCE",
  },
  "ROUTE_TREE_REFERENCE:factory.ts@248": {
    "fileName": "factory.ts",
    "id": "ROUTE_TREE_REFERENCE:factory.ts@248",
    "name": "app",
    "path": "/",
    "position": 248,
    "targetId": "ROUTE_TREE:factory.ts@248",
    "type": "ROUTE_TREE_REFERENCE",
  },
  "ROUTE_TREE_REFERENCE:index.ts@101": {
    "fileName": "index.ts",
    "id": "ROUTE_TREE_REFERENCE:index.ts@101",
    "name": "subHello",
    "path": "/sub",
    "position": 101,
    "targetId": "ROUTE_TREE:index.ts@101",
    "type": "ROUTE_TREE_REFERENCE",
  },
  "ROUTE_TREE_REFERENCE:panic.ts@36": {
    "fileName": "panic.ts",
    "id": "ROUTE_TREE_REFERENCE:panic.ts@36",
    "name": "app",
    "path": "/panic",
    "position": 36,
    "targetId": "ROUTE_TREE:panic.ts@36",
    "type": "ROUTE_TREE_REFERENCE",
  },
  "ROUTE_TREE_REFERENCE:silence.ts@36": {
    "fileName": "silence.ts",
    "id": "ROUTE_TREE_REFERENCE:silence.ts@36",
    "name": "silence",
    "path": "/silence",
    "position": 36,
    "targetId": "ROUTE_TREE:silence.ts@36",
    "type": "ROUTE_TREE_REFERENCE",
  },
  "SOURCE_REFERENCE:bye.ts@70": {
    "character": 16,
    "content": "(c) => c.text("Bye, sub!")",
    "fileName": "bye.ts",
    "id": "SOURCE_REFERENCE:bye.ts@70",
    "line": 3,
    "modules": [],
    "position": 70,
    "references": [],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:factory.ts@294": {
    "character": 15,
    "content": "(c) => c.text("Hello, Hono!")",
    "fileName": "factory.ts",
    "id": "SOURCE_REFERENCE:factory.ts@294",
    "line": 9,
    "modules": [],
    "position": 294,
    "references": [],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:index.ts@142": {
    "character": 18,
    "content": "(c) => c.text("Hello, sub!")",
    "fileName": "index.ts",
    "id": "SOURCE_REFERENCE:index.ts@142",
    "line": 6,
    "modules": [],
    "position": 142,
    "references": [],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:index.ts@194": {
    "character": 21,
    "content": "(c) => c.text("Bye, sub!")",
    "fileName": "index.ts",
    "id": "SOURCE_REFERENCE:index.ts@194",
    "line": 7,
    "modules": [],
    "position": 194,
    "references": [],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:panic.ts@67": {
    "character": 13,
    "content": "(c) => {
  c.status(500);
  return c.text("Panic!");
}",
    "fileName": "panic.ts",
    "id": "SOURCE_REFERENCE:panic.ts@67",
    "line": 3,
    "modules": [],
    "position": 67,
    "references": [],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:silence.ts@75": {
    "character": 17,
    "content": "(c) => c.text("...")",
    "fileName": "silence.ts",
    "id": "SOURCE_REFERENCE:silence.ts@75",
    "line": 3,
    "modules": [],
    "position": 75,
    "references": [],
    "type": "SOURCE_REFERENCE",
  },
}
`;

exports[`run test 'module imports' with location '../../test-case/module-imports' 1`] = `
{
  "MODULE_REFERENCE:%40fiberplane%2Fhono-otel@measure": {
    "id": "MODULE_REFERENCE:%40fiberplane%2Fhono-otel@measure",
    "import": "measure",
    "importPath": "@fiberplane/hono-otel",
    "name": "@fiberplane/hono-otel",
    "type": "MODULE_REFERENCE",
    "version": "0.3.1",
  },
  "MODULE_REFERENCE:hono%2Fcors@cors": {
    "id": "MODULE_REFERENCE:hono%2Fcors@cors",
    "import": "cors",
    "importPath": "hono/cors",
    "name": "hono",
    "type": "MODULE_REFERENCE",
    "version": "4.6.6",
  },
  "ROUTE_ENTRY:index.ts@133": {
    "fileName": "index.ts",
    "id": "ROUTE_ENTRY:index.ts@133",
    "method": "get",
    "modules": [],
    "path": "/",
    "position": 133,
    "sources": [
      "SOURCE_REFERENCE:index.ts@207",
      "SOURCE_REFERENCE:index.ts@223",
    ],
    "type": "ROUTE_ENTRY",
  },
  "ROUTE_ENTRY:index.ts@456": {
    "fileName": "index.ts",
    "id": "ROUTE_ENTRY:index.ts@456",
    "method": "get",
    "modules": [],
    "path": "/slow",
    "position": 456,
    "sources": [
      "SOURCE_REFERENCE:index.ts@473",
      "SOURCE_REFERENCE:index.ts@481",
    ],
    "type": "ROUTE_ENTRY",
  },
  "ROUTE_ENTRY:index.ts@848": {
    "fileName": "index.ts",
    "id": "ROUTE_ENTRY:index.ts@848",
    "method": "get",
    "modules": [],
    "path": "user/1",
    "position": 848,
    "sources": [
      "SOURCE_REFERENCE:index.ts@866",
      "SOURCE_REFERENCE:index.ts@874",
    ],
    "type": "ROUTE_ENTRY",
  },
  "ROUTE_TREE:index.ts@114": {
    "baseUrl": "",
    "entries": [
      "ROUTE_ENTRY:index.ts@133",
      "ROUTE_ENTRY:index.ts@456",
      "ROUTE_ENTRY:index.ts@848",
    ],
    "fileName": "index.ts",
    "id": "ROUTE_TREE:index.ts@114",
    "name": "app",
    "position": 114,
    "type": "ROUTE_TREE",
  },
  "SOURCE_REFERENCE:db.ts@137": {
    "character": 23,
    "content": "const getUser = measure("getUser", async () => {
  await new Promise((resolve) => setTimeout(resolve, 100));
  const value: User = {
    name: "John Doe",
    email: "john@doe.com",
  };
  return value;
})",
    "fileName": "db.ts",
    "id": "SOURCE_REFERENCE:db.ts@137",
    "line": 4,
    "modules": [
      "MODULE_REFERENCE:%40fiberplane%2Fhono-otel@measure",
    ],
    "position": 137,
    "references": [
      "SOURCE_REFERENCE:types.ts@29",
    ],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:index.ts@207": {
    "character": 2,
    "content": "() => cors()",
    "fileName": "index.ts",
    "id": "SOURCE_REFERENCE:index.ts@207",
    "line": 9,
    "modules": [
      "MODULE_REFERENCE:hono%2Fcors@cors",
    ],
    "position": 207,
    "references": [],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:index.ts@223": {
    "character": 2,
    "content": "(c) => c.text("Hello, Hono!")",
    "fileName": "index.ts",
    "id": "SOURCE_REFERENCE:index.ts@223",
    "line": 10,
    "modules": [],
    "position": 223,
    "references": [],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:index.ts@290": {
    "character": 0,
    "content": "export async function sleep(duration: number) {
  return new Promise((resolve) => setTimeout(resolve, duration));
}",
    "fileName": "index.ts",
    "id": "SOURCE_REFERENCE:index.ts@290",
    "line": 14,
    "modules": [],
    "position": 290,
    "references": [],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:index.ts@473": {
    "character": 17,
    "content": "cors()",
    "fileName": "index.ts",
    "id": "SOURCE_REFERENCE:index.ts@473",
    "line": 19,
    "modules": [
      "MODULE_REFERENCE:hono%2Fcors@cors",
    ],
    "position": 473,
    "references": [],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:index.ts@481": {
    "character": 25,
    "content": "async (c) => {
  await sleep(1000);
  return c.text("Hello, Hono (slow)!");
}",
    "fileName": "index.ts",
    "id": "SOURCE_REFERENCE:index.ts@481",
    "line": 19,
    "modules": [],
    "position": 481,
    "references": [
      "SOURCE_REFERENCE:index.ts@290",
    ],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:index.ts@866": {
    "character": 18,
    "content": "cors()",
    "fileName": "index.ts",
    "id": "SOURCE_REFERENCE:index.ts@866",
    "line": 32,
    "modules": [
      "MODULE_REFERENCE:hono%2Fcors@cors",
    ],
    "position": 866,
    "references": [],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:index.ts@874": {
    "character": 26,
    "content": "async (c) => {
  // await getUser();
  const user = await getUser();
  return c.json(user);
}",
    "fileName": "index.ts",
    "id": "SOURCE_REFERENCE:index.ts@874",
    "line": 32,
    "modules": [],
    "position": 874,
    "references": [
      "SOURCE_REFERENCE:db.ts@137",
    ],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:types.ts@0": {
    "character": 0,
    "content": "export type Email = string;",
    "fileName": "types.ts",
    "id": "SOURCE_REFERENCE:types.ts@0",
    "line": 0,
    "modules": [],
    "position": 0,
    "references": [],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:types.ts@29": {
    "character": 0,
    "content": "export type User = {
  name: string;
  email: Email;
};",
    "fileName": "types.ts",
    "id": "SOURCE_REFERENCE:types.ts@29",
    "line": 2,
    "modules": [],
    "position": 29,
    "references": [
      "SOURCE_REFERENCE:types.ts@0",
    ],
    "type": "SOURCE_REFERENCE",
  },
}
`;

exports[`run test 'multiple files' with location '../../test-case/multiple' 1`] = `
{
  "ROUTE_ENTRY:index.ts@55": {
    "fileName": "index.ts",
    "id": "ROUTE_ENTRY:index.ts@55",
    "method": "get",
    "modules": [],
    "path": "/",
    "position": 55,
    "sources": [
      "SOURCE_REFERENCE:index.ts@68",
    ],
    "type": "ROUTE_ENTRY",
  },
  "ROUTE_ENTRY:other.ts@102": {
    "fileName": "other.ts",
    "id": "ROUTE_ENTRY:other.ts@102",
    "method": "post",
    "modules": [],
    "path": "/",
    "position": 102,
    "sources": [
      "SOURCE_REFERENCE:other.ts@116",
    ],
    "type": "ROUTE_ENTRY",
  },
  "ROUTE_ENTRY:other.ts@54": {
    "fileName": "other.ts",
    "id": "ROUTE_ENTRY:other.ts@54",
    "method": "get",
    "modules": [],
    "path": "/",
    "position": 54,
    "sources": [
      "SOURCE_REFERENCE:other.ts@67",
    ],
    "type": "ROUTE_ENTRY",
  },
  "ROUTE_TREE:index.ts@36": {
    "baseUrl": "",
    "entries": [
      "ROUTE_ENTRY:index.ts@55",
    ],
    "fileName": "index.ts",
    "id": "ROUTE_TREE:index.ts@36",
    "name": "app",
    "position": 36,
    "type": "ROUTE_TREE",
  },
  "ROUTE_TREE:other.ts@35": {
    "baseUrl": "",
    "entries": [
      "ROUTE_ENTRY:other.ts@54",
      "ROUTE_ENTRY:other.ts@102",
    ],
    "fileName": "other.ts",
    "id": "ROUTE_TREE:other.ts@35",
    "name": "app",
    "position": 35,
    "type": "ROUTE_TREE",
  },
  "SOURCE_REFERENCE:index.ts@68": {
    "character": 13,
    "content": "(c) => c.text("Hello, Hono!")",
    "fileName": "index.ts",
    "id": "SOURCE_REFERENCE:index.ts@68",
    "line": 4,
    "modules": [],
    "position": 68,
    "references": [],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:other.ts@116": {
    "character": 14,
    "content": "(c) => c.json({ hello: "world" })",
    "fileName": "other.ts",
    "id": "SOURCE_REFERENCE:other.ts@116",
    "line": 7,
    "modules": [],
    "position": 116,
    "references": [],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:other.ts@67": {
    "character": 13,
    "content": "(c) => {
  return c.json({});
}",
    "fileName": "other.ts",
    "id": "SOURCE_REFERENCE:other.ts@67",
    "line": 3,
    "modules": [],
    "position": 67,
    "references": [],
    "type": "SOURCE_REFERENCE",
  },
}
`;

exports[`run test 'single file' with location '../../test-case/single' 1`] = `
{
  "ROUTE_ENTRY:index.ts@55": {
    "fileName": "index.ts",
    "id": "ROUTE_ENTRY:index.ts@55",
    "method": "get",
    "modules": [],
    "path": "/",
    "position": 55,
    "sources": [
      "SOURCE_REFERENCE:index.ts@68",
    ],
    "type": "ROUTE_ENTRY",
  },
  "ROUTE_TREE:index.ts@36": {
    "baseUrl": "",
    "entries": [
      "ROUTE_ENTRY:index.ts@55",
    ],
    "fileName": "index.ts",
    "id": "ROUTE_TREE:index.ts@36",
    "name": "app",
    "position": 36,
    "type": "ROUTE_TREE",
  },
  "SOURCE_REFERENCE:index.ts@68": {
    "character": 13,
    "content": "(c) => c.text("Hello, Hono!")",
    "fileName": "index.ts",
    "id": "SOURCE_REFERENCE:index.ts@68",
    "line": 4,
    "modules": [],
    "position": 68,
    "references": [],
    "type": "SOURCE_REFERENCE",
  },
}
`;

exports[`run test 'split routes' with location '../../test-case/split-routes' 1`] = `
{
  "MIDDLEWARE_ENTRY:index.ts@619": {
    "fileName": "index.ts",
    "id": "MIDDLEWARE_ENTRY:index.ts@619",
    "modules": [],
    "path": "/",
    "position": 619,
    "sources": [
      "SOURCE_REFERENCE:index.ts@627",
    ],
    "type": "MIDDLEWARE_ENTRY",
  },
  "MODULE_REFERENCE:hono%2Fcors@cors": {
    "id": "MODULE_REFERENCE:hono%2Fcors@cors",
    "import": "cors",
    "importPath": "hono/cors",
    "name": "hono",
    "type": "MODULE_REFERENCE",
    "version": "4.6.6",
  },
  "ROUTE_ENTRY:index.ts@320": {
    "fileName": "index.ts",
    "id": "ROUTE_ENTRY:index.ts@320",
    "method": "get",
    "modules": [],
    "path": "/api/v1/projects",
    "position": 320,
    "sources": [
      "SOURCE_REFERENCE:index.ts@353",
    ],
    "type": "ROUTE_ENTRY",
  },
  "ROUTE_ENTRY:index.ts@394": {
    "fileName": "index.ts",
    "id": "ROUTE_ENTRY:index.ts@394",
    "method": "get",
    "modules": [],
    "path": "/api/v1/projects/:id",
    "position": 394,
    "sources": [
      "SOURCE_REFERENCE:index.ts@431",
    ],
    "type": "ROUTE_ENTRY",
  },
  "ROUTE_ENTRY:projects.ts@253": {
    "fileName": "projects.ts",
    "id": "ROUTE_ENTRY:projects.ts@253",
    "method": "get",
    "modules": [],
    "path": "/api/v1/projects",
    "position": 253,
    "sources": [
      "SOURCE_REFERENCE:projects.ts@286",
    ],
    "type": "ROUTE_ENTRY",
  },
  "ROUTE_ENTRY:projects.ts@327": {
    "fileName": "projects.ts",
    "id": "ROUTE_ENTRY:projects.ts@327",
    "method": "get",
    "modules": [],
    "path": "/api/v1/projects/:id",
    "position": 327,
    "sources": [
      "SOURCE_REFERENCE:projects.ts@364",
    ],
    "type": "ROUTE_ENTRY",
  },
  "ROUTE_ENTRY:users.ts@179": {
    "fileName": "users.ts",
    "id": "ROUTE_ENTRY:users.ts@179",
    "method": "get",
    "modules": [],
    "path": "/api/v1/users",
    "position": 179,
    "sources": [
      "SOURCE_REFERENCE:users.ts@206",
    ],
    "type": "ROUTE_ENTRY",
  },
  "ROUTE_ENTRY:users.ts@244": {
    "fileName": "users.ts",
    "id": "ROUTE_ENTRY:users.ts@244",
    "method": "get",
    "modules": [],
    "path": "/api/v1/users/:id",
    "position": 244,
    "sources": [
      "SOURCE_REFERENCE:users.ts@275",
    ],
    "type": "ROUTE_ENTRY",
  },
  "ROUTE_TREE:index.ts@103": {
    "baseUrl": "",
    "entries": [
      "ROUTE_ENTRY:index.ts@320",
      "ROUTE_ENTRY:index.ts@394",
    ],
    "fileName": "index.ts",
    "id": "ROUTE_TREE:index.ts@103",
    "name": "projects",
    "position": 103,
    "type": "ROUTE_TREE",
  },
  "ROUTE_TREE:index.ts@601": {
    "baseUrl": "",
    "entries": [
      "MIDDLEWARE_ENTRY:index.ts@619",
      "ROUTE_TREE_REFERENCE:users.ts@36",
      "ROUTE_TREE_REFERENCE:index.ts@103",
    ],
    "fileName": "index.ts",
    "id": "ROUTE_TREE:index.ts@601",
    "name": "app",
    "position": 601,
    "type": "ROUTE_TREE",
  },
  "ROUTE_TREE:projects.ts@36": {
    "baseUrl": "",
    "entries": [
      "ROUTE_ENTRY:projects.ts@253",
      "ROUTE_ENTRY:projects.ts@327",
    ],
    "fileName": "projects.ts",
    "id": "ROUTE_TREE:projects.ts@36",
    "name": "projects",
    "position": 36,
    "type": "ROUTE_TREE",
  },
  "ROUTE_TREE:users.ts@36": {
    "baseUrl": "",
    "entries": [
      "ROUTE_ENTRY:users.ts@179",
      "ROUTE_ENTRY:users.ts@244",
    ],
    "fileName": "users.ts",
    "id": "ROUTE_TREE:users.ts@36",
    "name": "users",
    "position": 36,
    "type": "ROUTE_TREE",
  },
  "ROUTE_TREE_REFERENCE:index.ts@103": {
    "fileName": "index.ts",
    "id": "ROUTE_TREE_REFERENCE:index.ts@103",
    "name": "projects",
    "path": "/",
    "position": 103,
    "targetId": "ROUTE_TREE:index.ts@103",
    "type": "ROUTE_TREE_REFERENCE",
  },
  "ROUTE_TREE_REFERENCE:users.ts@36": {
    "fileName": "users.ts",
    "id": "ROUTE_TREE_REFERENCE:users.ts@36",
    "name": "users",
    "path": "/",
    "position": 36,
    "targetId": "ROUTE_TREE:users.ts@36",
    "type": "ROUTE_TREE_REFERENCE",
  },
  "SOURCE_REFERENCE:index.ts@133": {
    "character": 6,
    "content": "const PROJECTS = [
  {
    id: 1,
    name: "Project A",
    description: "Project A description",
  },
  {
    id: 2,
    name: "Project B",
    description: "Project B description",
  },
]",
    "fileName": "index.ts",
    "id": "SOURCE_REFERENCE:index.ts@133",
    "line": 6,
    "modules": [],
    "position": 133,
    "references": [],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:index.ts@353": {
    "character": 33,
    "content": "(c) => {
  return c.json(PROJECTS);
}",
    "fileName": "index.ts",
    "id": "SOURCE_REFERENCE:index.ts@353",
    "line": 19,
    "modules": [],
    "position": 353,
    "references": [
      "SOURCE_REFERENCE:index.ts@133",
    ],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:index.ts@431": {
    "character": 37,
    "content": "(c) => {
  const id = Number.parseInt(c.req.param("id"));
  const project = PROJECTS.find((p) => p.id === id);
  return c.json(project);
}",
    "fileName": "index.ts",
    "id": "SOURCE_REFERENCE:index.ts@431",
    "line": 23,
    "modules": [],
    "position": 431,
    "references": [
      "SOURCE_REFERENCE:index.ts@133",
    ],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:index.ts@627": {
    "character": 8,
    "content": "cors()",
    "fileName": "index.ts",
    "id": "SOURCE_REFERENCE:index.ts@627",
    "line": 32,
    "modules": [
      "MODULE_REFERENCE:hono%2Fcors@cors",
    ],
    "position": 627,
    "references": [],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:projects.ts@286": {
    "character": 33,
    "content": "(c) => {
  return c.json(PROJECTS);
}",
    "fileName": "projects.ts",
    "id": "SOURCE_REFERENCE:projects.ts@286",
    "line": 17,
    "modules": [],
    "position": 286,
    "references": [
      "SOURCE_REFERENCE:projects.ts@66",
    ],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:projects.ts@364": {
    "character": 37,
    "content": "(c) => {
  const id = Number.parseInt(c.req.param("id"));
  const project = PROJECTS.find((p) => p.id === id);
  return c.json(project);
}",
    "fileName": "projects.ts",
    "id": "SOURCE_REFERENCE:projects.ts@364",
    "line": 21,
    "modules": [],
    "position": 364,
    "references": [
      "SOURCE_REFERENCE:projects.ts@66",
    ],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:projects.ts@66": {
    "character": 6,
    "content": "const PROJECTS = [
  {
    id: 1,
    name: "Project A",
    description: "Project A description",
  },
  {
    id: 2,
    name: "Project B",
    description: "Project B description",
  },
]",
    "fileName": "projects.ts",
    "id": "SOURCE_REFERENCE:projects.ts@66",
    "line": 4,
    "modules": [],
    "position": 66,
    "references": [],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:users.ts@206": {
    "character": 27,
    "content": "(c) => {
  return c.json(USERS);
}",
    "fileName": "users.ts",
    "id": "SOURCE_REFERENCE:users.ts@206",
    "line": 17,
    "modules": [],
    "position": 206,
    "references": [
      "SOURCE_REFERENCE:users.ts@63",
    ],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:users.ts@275": {
    "character": 31,
    "content": "(c) => {
  const id = Number.parseInt(c.req.param("id"));
  const user = USERS.find((u) => u.id === id);
  return c.json(user);
}",
    "fileName": "users.ts",
    "id": "SOURCE_REFERENCE:users.ts@275",
    "line": 21,
    "modules": [],
    "position": 275,
    "references": [
      "SOURCE_REFERENCE:users.ts@63",
    ],
    "type": "SOURCE_REFERENCE",
  },
  "SOURCE_REFERENCE:users.ts@63": {
    "character": 6,
    "content": "const USERS = [
  {
    id: 1,
    name: "Alice",
    age: 25,
  },
  {
    id: 2,
    name: "Bob",
    age: 30,
  },
]",
    "fileName": "users.ts",
    "id": "SOURCE_REFERENCE:users.ts@63",
    "line": 4,
    "modules": [],
    "position": 63,
    "references": [],
    "type": "SOURCE_REFERENCE",
  },
}
`;
